labels are in correct spot now outside of chart, but they might spill over edges for longer answers

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -157,5 +157,5 @@ h1 {
 }
 
 .charttext {
-  font-size: .5em;
+  font-size: .8em;
 }
